# pango-cairo-helpers

./: .gitignore  Makefile  NEWS.rst  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build.yml  coverage.yml
docs/: Makefile  conf.py  index.rst  modules.rst
pangocairohelpers/: __init__.py  extent.py  glyph_extent.py  glyph_extents.py  layout_clusters.py  line_helper.py  line_string_helper.py  point_helper.py  side.py
pangocairohelpers/text_path/: __init__.py  side.py  standard_layout_engine.py  text_path.py  text_path_abstract.py  text_path_builder.py  text_path_glyph_item.py  upright_text_path.py
pangocairohelpers/text_path/layout_engines/: __init__.py  layout_engine_abstract.py  svg.py
tests/functional/: debug.py  test_layout_clusters.py  test_layout_engine_abstract.py  test_layout_engines_svg.py  test_line_helper.py  test_line_string_helper.py  test_point_helper.py  test_text_path.py  test_upright_text_path.py
tests/unit/: test_extent.py  test_glyph_extent.py
