[metadata]
name = pango-cairo-helpers
version = file: pangocairohelpers/VERSION
url = https://github.com/leifgehrmann/pango-cairo-helpers
license = LGPL-2.1
license_file = LICENSE
description = Helper modules for rendering text using pango and cairo
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Leif Gehrmann
keywords =
  pango
  cairo
  text
  graphics
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Multimedia :: Graphics
  Topic :: Text Processing :: Fonts
project_urls =
  Code = https://github.com/leifgehrmann/pango-cairo-helpers
  Issue tracker = https://github.com/leifgehrmann/pango-cairo-helpers/issues

[options]
packages = find:
install_requires =
  cairocffi >= 1.0.2
  pangocffi >= 0.4.0
  pangocairocffi >= 0.2.6
  shapely >= 1.6.4.post2
setup_requires =
  pytest-runner
python_requires = >= 3.5

[options.package_data]
pangocairohelpers = VERSION

[aliases]
test=pytest
